--- a/package.json
+++ b/package.json
@@ -3,21 +3,36 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect src/index.js",  
+    "beautiful": "lint-staged",
+    "start": "nodemon --inspect src/index.js",
     "watch": "sass --watch src/resources/scss:src/public/css --no-source-map",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
+  
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
+  },
+
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+
   "dependencies": {
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "handlebars": "^4.7.8"
   },
   "devDependencies": {
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.11",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
+    "prettier": "^3.4.2",
     "sass": "^1.82.0"
   }
 }
