--- a/package.json
+++ b/package.json
@@ -11,21 +11,19 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  
   "lint-staged": {
     "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
   },
-
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
   },
-
   "dependencies": {
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
-    "handlebars": "^4.7.8"
+    "handlebars": "^4.7.8",
+    "mongoose": "^8.8.4"
   },
   "devDependencies": {
     "husky": "^9.1.7",
