--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "handlebars": "^4.7.8",
-    "mongoose": "^8.8.4"
+    "mongoose": "^8.8.4",
+    "mongoose-slug-updater": "^3.3.0"
   },
   "devDependencies": {
     "husky": "^9.1.7",
